--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,8 +55,27 @@ div {
 	width: 60rem;
 	height: 4.375rem;
 	margin: 0 auto;
+	padding-right: 0.938rem;
+	padding-left: 0.938rem;
+}
+.top-navigation > .content > .logo {
+	height: 4.375rem;
+}
+.top-navigation > .links {
+	float: right;
+	color: #838994;
+	font-size: 1.04rem;
+	margin-top: 1.7rem;
 }
 
+.top-navigation > .links li{
+	display: inline-block;
+	margin-left: 1.563rem;
+}
+.top-navigation > .links li.active {
+	color: #4c5058;
+	font-weight: 500;
+}
 
 
 
