--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,14 @@
+/* Paul Irish Box-Sizing: Border-Box reset - apply a natural box layout model to all elements, but allowing components to change http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+/**
+ * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
+ * http://cssreset.com
+ */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -48,6 +59,10 @@ div {
     border: 1px solid Chocolate;
 }
 
+
+.content {
+	padding: 0 1rem;
+}
 .top-navigation {
 	background-color: #fff;
 }
@@ -57,28 +72,32 @@ div {
 	margin: 0 auto;
 	padding: 0 1rem;
 	min-width: 37.5rem;
-	box-sizing: border-box;
 }
 .top-navigation > .content > .logo {
 	height: 4.375rem;
 }
-.top-navigation > .content > .links {
+.top-navigation .links {
 	float: right;
+	font-family: 'Roboto', sans-serif;
 	color: #838994;
 	font-size: 1.04rem;
 	margin-top: 1.7rem;
+	-webkit-font-smoothing:antialiased;
 }
 
-.top-navigation > .content > .links li{
+.top-navigation .links li{
 	display: inline-block;
 	margin-left: 1.563rem;
+
 }
-.top-navigation > .links li.active {
+.top-navigation .links .active {
 	color: #4c5058;
 	font-weight: 500;
 }
-
-
+.top-navigation .links li:hover {
+	color: #333333;
+	cursor: pointer;
+}
 
 
 
