--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,9 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+		line-height: 1;
+		font-family: 'Roboto', sans-serif;
+		-webkit-font-smoothing:antialiased;
 }
 ol, ul {
 	list-style: none;
@@ -64,6 +66,7 @@ div {
 	padding: 0 1rem;
 	margin: 0 auto;
 	min-width: 37.5rem;
+	width: 60rem;
 }
 
 /*Top navigation section*/
@@ -72,7 +75,6 @@ div {
 	background-color: #fff;
 }
 .top-navigation > .content {
-	width: 60rem;
 	height: 4.375rem;
 
 }
@@ -119,7 +121,7 @@ div {
 	font-weight: 300;
 }
 .introduction h1 {
-	margin-top 17.5rem;
+	margin-top: 17.5rem;
 	font-size: 3.125rem;
 }
 .introduction h3 {
@@ -130,6 +132,21 @@ div {
 	color: white;
 	text-align: center;
 	margin-top: 1.563rem;
+}
+.big-button {
+	width: 9.688rem;
+	background-color: #f15a29;
+	border-color: f15a29;
+	text-shadow: none;
+	border-style: none;
+	border-radius: 4px;
+	padding: 1rem 1.5rem;
+	color: white;
+	font-size: 1.125rem;
+}
+button:hover {
+	background-color: #BF4821;
+	cursor: pointer;
 }
 
 
