--- a/CSS/style.css
+++ b/CSS/style.css
@@ -73,6 +73,9 @@ div {
 
 .top-navigation {
 	background-color: #fff;
+	position: fixed;
+	width: 100%;
+	z-index: 9999;
 }
 .top-navigation > .content {
 	height: 4.375rem;
