--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,13 +55,6 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-body {
-    background-color: LightGray;
-}
-div {
-    border: 1px solid chocolate;
-}
-
 
 .content {
 	padding: 0 1rem;
@@ -187,10 +180,33 @@ button:hover {
 	border-top: 1px solid #eaebec;
 	margin: 1.313rem 0;
 }
-
-
-
-
+.social .icons > li{
+	border-radius: 1.25rem;
+	width: 2.5rem;
+	height: 2.5rem;
+	display: inline-block;
+	margin: 1.25rem 5px;
+	border: 1px solid #eaebec;
+	padding: .625rem 0;
+	text-align: center;
+}
+.social .twitter {
+	color: #55acee;
+}
+.social .facebook {
+	color: #4c66a4;
+}
+.social .instagram {
+	color: #3f729b;
+}
+.social .copy {
+	font-size: 0.9rem;
+	font-weight: 300;
+	color: #838994;
+}
+.social li:hover {
+	cursor: pointer;
+}
 
 
 
