--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,7 +104,7 @@ table {
 /*Intro Section*/
 
 .introduction {
-	background-image: url(../images/background-image.jpg);
+	background-image: url('../images/background-image.jpg');
 	background-position: center bottom;
 	background-repeat: no-repeat;
 	background-size: cover;
